log
Sat Apr  9 18:15:19 UTC 2022: 
 hashmap.c | 98 ++++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 85 insertions(+), 13 deletions(-)
 tests:  0|0
92e06cb
Sat Apr  9 18:22:54 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7f3b28e
Sat Apr  9 18:28:39 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:95:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(searchMap(map,key));
   ^~
hashmap.c:96:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   {
   ^
cc1: all warnings being treated as errors
Compilation failed
6bcabd9
Sat Apr  9 18:28:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e50522d
